# za_ros

./: .gitmodules  README.md
za_control/: CMakeLists.txt  package.xml  za_controller_plugins.xml  ~CMakeLists.txt  ~package.xml
za_control/config/: default_controllers.yaml
za_control/include/za_control/: joint_velocity_controller.h  pseudo_inversion.h  za_state_controller.h
za_control/src/: za_control_node.cpp  za_state_controller.cpp
za_controllers/: CMakeLists.txt  README.md  package.xml  za_controllers_plugin.xml  ~CMakeLists.txt
za_controllers/cfg/: cartesian_trajectory_param.cfg  posvel_param.cfg  taskpriority_param.cfg
za_controllers/include/za_controllers/: cartesian_posvel_controller.h  cartesian_trajectory_controller.h  cartesian_velocity_controller.h  pseudo_inversion.h  task_priority_controller.h  task_priority_trajectory_controller.h
za_controllers/src/: cartesian_posvel_controller.cpp  cartesian_trajectory_controller.cpp  cartesian_velocity_controller.cpp  task_priority_controller.cpp  task_priority_trajectory_controller.cpp
za_controllers/test/: cartesian_posvel_controller_test.py  cartesian_trajectory_controller_test.py  cartesian_velocity_controller_test.py  task_priority_controller_test.py  task_priority_trajectory_controller_test.py
za_gazebo/: CMakeLists.txt  package.xml  za_hw_sim_plugin.xml
za_gazebo/config/: sim_controllers.yaml  za_hw_sim.yaml
za_gazebo/include/za_gazebo/: controller_verifier.h  joint.h  model_kdl.h  statemachine.h  za_hw_sim.h
za_gazebo/launch/: za.launch
za_gazebo/src/: controller_verifier.cpp  joint.cpp  model_kdl.cpp  za_hw_sim.cpp
za_hardware/: README.md  package.xml
za_hardware/config/: hardware_settings.yaml  za_hardware.yaml
za_hardware/launch/: sim_hardware.launch
za_hw/: CMakeLists.txt  package.xml
za_hw/include/za_hw/: model_base.h  trigger_rate.h  za_model_interface.h  za_state.h  za_state_interface.h
za_hw/src/: trigger_rate.cpp
za_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
za_moveit_config/config/: fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  ros_controllers.yaml  za.srdf  za.urdf.xacro
za_moveit_config/launch/: demo.launch.py  move_group.launch  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
za_msgs/: CMakeLists.txt  package.xml
za_msgs/msg/: PosVelSetpoint.msg  ZaState.msg
za_robot/: CMakeLists.txt  README.md  package.xml
za_robot/config/: ros_controllers.yaml
za_robot/launch/: hardware_hal.launch  hardware_sim.launch  moveit_planning.launch  moveit_planning.launch.py  ros_controllers.launch  ros_controllers.launch.py  za_robot.launch  za_robot.launch.py  za_visualization.launch  za_visualization.launch.py
za_robot/rviz/: za_robot.rviz
za_ros/: CMakeLists.txt  package.xml
