<?xml version="1.0"?>
<package format="2">
  <name>za_control</name>
  <version>0.1.0</version>
  <description> hydra_control provides a ros_control interface for the hydra system </description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>za_hw</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf</depend>

  <exec_depend>za_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  
  <export>
    <controller_interface plugin="${prefix}/za_controller_plugins.xml"/>
  </export>
</package>