<?xml version="1.0"?>
<package format="2">
  <name>za_gazebo</name>
  <version>0.1.0</version>
  <description>This package offers the ZaHWSim Class to simulate a Tormach Za6 Robot in Gazebo</description>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>gazebo_dev</build_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros_control</depend>
  <depend>kdl_parser</depend>
  <depend>boost_sml</depend>
  <depend>control_toolbox</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>eigen_conversions</depend>
  <depend>urdf</depend>
  <depend>za_hw</depend>
  <depend>za_control</depend>

  <export>
    <gazebo_ros_control plugin="${prefix}/za_hw_sim_plugin.xml" />
  </export>
</package>