<?xml version="1.0"?>
<package format="2">
  <name>za_msgs</name>
  <version>0.1.0</version>
  <description>za_msgs provides messages specific to Tormach Za6 robots</description>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache 2.0</license>
  <author>Alex Arbogast</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export>
    <architecture_independent/>
  </export>
</package>