<?xml version="1.0"?>
<package format="3">
  <name>za_msgs</name>
  <version>0.2.0</version>
  <description>za_msgs provides messages specific to Tormach Za6 robots</description>
  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <license>Apache 2.0</license>

  <author>Alex Arbogast</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>