<?xml version="1.0"?>
<package format="3">
  <name>za_robot</name>
  <version>0.2.0</version>
  <description>Launch files for interacting with the Za6</description>

  <maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
  <author email="arbogastaw@gmail.com">Alex Arbogast</author>

  <license>Apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>za_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
