<?xml version="1.0"?>
<package format="2">
	<name>za_ros</name>
	<version>0.1.0</version>
	<description>Metapackage for za_ros</description>
	<maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
	<license>BSD</license>

	<author>Alex Arbogast</author>
	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>za_description</exec_depend>
	<exec_depend>za_gazebo</exec_depend>
	<exec_depend>za_hw</exec_depend>

	<export>
		<metapackage/>
	</export>
</package>
