<?xml version="1.0"?>
<package format="2">
	<name>za_ros</name>
	<version>0.1.0</version>
	<description>Metapackage for za_ros</description>
	<maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
	<license>Apache2</license>

	<author>Alex Arbogast</author>
	<buildtool_depend>catkin</buildtool_depend>

	<exec_depend>za_description</exec_depend>
	<exec_depend>za_hardware</exec_depend>
	<exec_depend>za_moveit_config</exec_depend>
	<exec_depend>za_robot</exec_depend>

	<export>
		<metapackage/>
	</export>
</package>
