<?xml version="1.0"?>
<package format="3">
	<name>za_ros</name>
	<version>0.2.0</version>
	<description>ROS2 metapackage for za_ros</description>
	<maintainer email="arbogastaw@gmail.com">Alex Arbogast</maintainer>
	<license>Apache2</license>

	<author>Alex Arbogast</author>
	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>za_description</exec_depend>
	<exec_depend>za_hardware</exec_depend>
	<exec_depend>za_moveit_config</exec_depend>
	<exec_depend>za_robot</exec_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
